# discord.py-stubs

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fix-site-packages.sh  mypy.ini  pyproject.toml  stubtest-whitelist.txt
.github/: dependabot.yml
.github/workflows/: release.yml  unit-tests.yml
.vim/: coc-settings.json
discord-stubs/: __init__.pyi  abc.pyi  activity.pyi  appinfo.pyi  asset.pyi  audit_logs.pyi  calls.pyi  channel.pyi  client.pyi  colour.pyi  embeds.pyi  emoji.pyi  enums.pyi  errors.pyi  file.pyi  flags.pyi  gateway.pyi  guild.pyi  http.pyi  integrations.pyi  invite.pyi  iterators.pyi  member.pyi  mentions.pyi  message.pyi  object.pyi  opus.pyi  partial_emoji.pyi  permissions.pyi  player.pyi  raw_models.pyi  reaction.pyi  role.pyi  shard.pyi  state.pyi  sticker.pyi  team.pyi  template.pyi  user.pyi  utils.pyi  (+3 more)
discord-stubs/ext/commands/: __init__.pyi  bot.pyi  cog.pyi  context.pyi  converter.pyi  cooldowns.pyi  core.pyi  errors.pyi  help.pyi
discord-stubs/ext/tasks/: __init__.pyi
discord/ext/typed_commands/: __init__.py  bot.py  cog.py  core.py  help.py
discord_mypy/: __init__.py  plugin.py
src/discord-stubs/: asset.pyi  channel.pyi  client.pyi  emoji.pyi  guild.pyi  http.pyi  iterators.pyi  member.pyi  mentions.pyi  message.pyi  oggparse.pyi  permissions.pyi  role.pyi  shard.pyi  template.pyi  user.pyi  voice_client.pyi  webhook.pyi  widget.pyi
src/discord-stubs/ext/commands/: __init__.pyi  errors.pyi
src/discord/ext/typed_commands/: __init__.pyi
test-data/: mypy.ini  test_bot.yml  test_client.yml  test_iterators.yml  test_member.yml  test_permissions.yml
