[tool.poetry]
name = "discord.py-stubs"
version = "1.6.0.2"
description = "discord.py stubs"
homepage = "https://github.com/bryanforbes/discord.py-stubs"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "discord-stubs" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.1"
mypy = ">=0.782"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
"discord.py" = "^1.6.0"
flake8 = "^3.8.4"
flake8-pyi = "^20.10.0"
isort = "^5.7.0"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
pytest-mypy-plugins = "^1.6.1"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
known_first_party = ["discord"]
extra_standard_library = ["typing_extensions"]
virtual_env = ".venv"
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy-ini-file=test-data/mypy.ini"
testpaths = ["test-data"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
